sandbox/output
ProfitIsolation.java:2: error: package org.apache.logging.log4j does not exist
import org.apache.logging.log4j.LogManager;
                               ^
ProfitIsolation.java:3: error: package org.apache.logging.log4j does not exist
import org.apache.logging.log4j.Logger;
                               ^
ProfitIsolation.java:10: error: cannot find symbol
    static final Logger logger = LogManager.getLogger(ProfitIsolation.class.getName());
                 ^
  symbol:   class Logger
  location: class ProfitIsolation
ProfitIsolation.java:10: error: cannot find symbol
    static final Logger logger = LogManager.getLogger(ProfitIsolation.class.getName());
                                 ^
  symbol:   variable LogManager
  location: class ProfitIsolation
ProfitIsolation.java:16: error: cannot find symbol
                Example::calculateCosts);
                ^
  symbol:   variable Example
  location: class ProfitIsolation
ProfitIsolation.java:20: error: cannot find symbol
                Example::calculateRevenue);
                ^
  symbol:   variable Example
  location: class ProfitIsolation
ProfitTest.java:28: error: method calculate in class ProfitIsolation cannot be applied to given types;
        assertEquals(18845.9, ProfitIsolation.calculate(), 0.001);
                                             ^
  required: String[]
  found: no arguments
  reason: actual and formal argument lists differ in length
7 errors
